--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,10 +3,7 @@
   "name": "Youtube Jam",
   "version": "1.0",
   "description": "YouTube videolarını arkadaşlarınla senkronize izle.",
-  "permissions": ["activeTab", "storage"],
-  "action": {
-    "default_popup": "popup.html"
-  },
+  "permissions": ["activeTab"],
   "content_scripts": [
     {
       "matches": ["https://www.youtube.com/*"],
