--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "youtube-jam-server",
+  "name": "youtubejam-server",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   }
 }
