--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "YoutubeJam",
-  "version": "1.1.1",
-  "description": "YouTube videolarını aynı odadaki kişilerle senkronize izleme (play/pause/seek).",
+  "name": "JamRoom",
+  "version": "1.1.2",
+  "description": "Real-time playback sync for YouTube rooms (play/pause/seek).",
   "homepage_url": "https://github.com/AdalSuUygur/YoutubeJam",
   "minimum_chrome_version": "114",
   "icons": {
@@ -11,9 +11,11 @@
     "128": "icons/icon128.png"
   },
   "permissions": ["activeTab", "storage"],
+  "host_permissions": ["https://www.youtube.com/*"],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "icons/icon48.png"
+    "default_icon": "icons/icon48.png",
+    "default_title": "JamRoom"
   },
   "background": {
     "service_worker": "background.js"
@@ -21,13 +23,8 @@
   "content_scripts": [
     {
       "matches": ["https://www.youtube.com/*"],
-      "js": [
-        "socket.io.min.js", 
-        "config.js",
-        "content.js"
-      ],
+      "js": ["socket.io.min.js", "config.js", "content.js"],
       "run_at": "document_idle"
     }
-  ],
-  "host_permissions": ["https://www.youtube.com/*"]
+  ]
 }
